<resources>
    <string name="app_name">G-Fresh</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="all_you_need_is_in_one_place">All you need is in one place</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user? Signup Now</string>
    <string name="toLogin">Have an account? Login Now</string>
    <string name="skipLogin">Skip Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="debit_card_credit_card">Debit Card/ Credit Card</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="pay">Pay</string>
    <string name="internal_banking">Internal Banking</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="select_address">Select address</string>
    <string name="order_amount">Order Amount</string>
    <string name="delivery_chargers">Delivery Chargers</string>
    <string name="sub_total">Sub Total</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="items">Items:</string>
    <string name="add">Add</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="save_address">Save address</string>
    <string name="type">Type</string>
    <string name="house_number">House Number</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully!</string>
</resources>