<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toTopOf="@id/constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_drawable"
        android:padding="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/new_user"
            android:textAllCaps="true"
            android:textColor="#670404"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:background="@drawable/input_shape"
            android:drawableEnd="@drawable/ic_outline_email_24"
            android:elevation="3dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/enter_email"
            android:padding="@dimen/_18dp"
            android:textColor="@color/black"
            android:textColorHint="#670404"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/input_shape"
            android:drawableEnd="@drawable/ic_baseline_lock_open_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/_18sp"
            android:textColor="@color/black"
            android:textColorHint="#670404"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:background="@drawable/button_shape_drawable"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/_15dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/skipLogin"
            android:textColor="#A9FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forgot_password"
            android:textColor="#A9FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressBar"
            android:layout_width="@dimen/_117dp"
            android:layout_height="@dimen/_119dp"
            android:elevation="@dimen/_10dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="#AEE7EAE9"
            app:indicatorDirectionCircular="clockwise"
            app:indicatorSize="@dimen/_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:trackColor="#8B36FFC6"
            app:trackThickness="@dimen/_8dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

</androidx.constraintlayout.widget.ConstraintLayout>
