<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_full_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_shipping_totals"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_shipping_totals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_view"
            android:padding="@dimen/_15sp"
            app:layout_constraintBottom_toTopOf="@+id/button_address">

            <TextView
                android:id="@+id/text_view_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textSize="@dimen/_15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_view_subtotal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/text_view_subtotal"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="@dimen/_15sp"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/text_view_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_subtotal"
                android:text="@string/delivery_chargers"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/text_view_delivery_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_subtotal_amount"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/text_view_delivery"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/text_view_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_delivery"
                android:text="@string/order_amount"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_delivery_amount"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/text_view_delivery"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_address"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/select_address"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_empty_cart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_420dp"
            android:src="@drawable/cart_empty" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_go_shopping"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/go_shopping"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>