<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    app:cardBackgroundColor="#C0D3B7"
    app:cardCornerRadius="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15dp">

        <ImageView
            android:id="@+id/image_product_cart"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/noimage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00439120"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6E6E6"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!--            <ImageView-->
            <!--                android:id="@+id/iv_minus"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:src="@drawable/ic_minus" />-->

            <TextView
                android:id="@+id/tv_qtyu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:minWidth="48dp"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!--            <ImageView-->
            <!--                android:id="@+id/iv_add"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:src="@drawable/ic_add" />-->
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_cart_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@string/title"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            app:layout_constraintStart_toEndOf="@+id/image_product_cart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_cart_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="#FF0000"
            android:textSize="@dimen/_15sp"
            app:layout_constraintStart_toEndOf="@+id/image_product_cart"
            app:layout_constraintTop_toBottomOf="@+id/text_view_cart_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
